Bug 415890 - Different name when adding connected states compared to adding via the toolbar
Summary: Different name when adding connected states compared to adding via the toolbar
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 12:07 UTC by Ralf Habacker
Modified: 2020-01-05 12:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.1 (KDE Applications 19.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-05 12:07:31 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add state diagram
3. add state by tool bar
4. add connected state by context menu

OBSERVED RESULT
The state added in step 4 is named 'state', while the state added with the toolbar is named 'new_state'.

EXPECTED RESULT
The status added in step 4 should use the same name as the status added using the toolbar.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
KDE Frameworks Version: 5.65.0
Qt Version: 5.12.1
Comment 1 Ralf Habacker 2020-01-05 12:11:12 UTC
Git commit 508dff46748d1824caac0304089cc20b3330302c by Ralf Habacker.
Committed on 05/01/2020 at 12:10.
Pushed by habacker into branch 'release/19.12'.

Fix 'Different name when adding connected states compared to adding via the toolbar'
FIXED-IN:2.30.1 (KDE Applications 19.12.1)

M  +3    -0    umbrello/umlwidgets/umlwidget.cpp

https://invent.kde.org/kde/umbrello/commit/508dff46748d1824caac0304089cc20b3330302c