Fix 'Different name when adding connected states compared to adding via the toolbar'

BUG:415890
FIXED-IN:2.30.1 (KDE Applications 19.12.1)